@@ -15,7 +15,8 @@
         ret;\
     })
 
-extern int mln_trace_init(void);
+extern mln_string_t *mln_trace_path(void);
+extern int mln_trace_init(mln_event_t *ev, mln_string_t *path);
 extern mln_lang_ctx_t *mln_trace_task_get(void);
 
 #endif
