@@ -4,69 +4,67 @@
  */
 
 #include "mln_conf.h"
-#include "mln_log.h"
 #include "mln_trace.h"
-#include "mln_iothread.h"
+#include "mln_log.h"
 
 static mln_lang_t *trace_lang = NULL;
 static mln_lang_ctx_t *trace_ctx = NULL;
 static int trace_signal_fds[2];
 
-static inline int mln_trace_enable(mln_string_t **path);
 static int mln_trace_lang_signal(mln_lang_t *lang);
 static int mln_trace_lang_clear(mln_lang_t *lang);
-static void *mln_trace_iothread_entry(void *args);
 static void mln_trace_lang_ctx_return_handler(mln_lang_ctx_t *ctx);
+static void mln_trace_lang_check(mln_event_t *ev, void *data);
 
-int mln_trace_init(void)
+mln_string_t *mln_trace_path(void)
 {
-    int rc;
-    mln_event_t *ev;
-    mln_iothread_t t;
-    mln_string_t *path = NULL;
-    struct mln_iothread_attr tattr;
+    mln_conf_t *cf;
+    mln_conf_domain_t *cd;
+    mln_conf_cmd_t *cc;
+    mln_conf_item_t *ci;
 
-    if ((rc = mln_trace_enable(&path)) <= 0) {
-        return rc;
-    }
+    cf = mln_get_conf();
+    if (cf == NULL) return NULL;
 
+    cd = cf->search(cf, "main");
+    if (cd == NULL) return NULL;
+
+    cc = cd->search(cd, "trace_mode");
+    if (cc == NULL) return NULL;
+
+    ci = cc->search(cc, 1);
+    if (mln_conf_get_narg(cc) != 1 || ci == NULL) return NULL;
+
+    if (ci->type == CONF_STR)
+        return ci->val.s;
+
+    return NULL;
+}
+
+int mln_trace_init(mln_event_t *ev, mln_string_t *path)
+{
     if (socketpair(AF_UNIX, SOCK_STREAM, 0, trace_signal_fds) < 0) {
-        mln_log(error, "event new failed\n");
         goto err1;
     }
 
-    if ((ev = mln_event_new()) == NULL) {
-        mln_log(error, "event new failed\n");
-        goto err2;
-    }
-
     if ((trace_lang = mln_lang_new(ev, mln_trace_lang_signal, mln_trace_lang_clear)) == NULL) {
-        mln_log(error, "trace lang init failed\n");
-        goto err3;
+        goto err2;
     }
     mln_lang_cache_set(trace_lang);
 
     trace_ctx = mln_lang_job_new(trace_lang, M_INPUT_T_FILE, path, NULL, mln_trace_lang_ctx_return_handler);
     if (trace_ctx == NULL) {
-        mln_log(error, "Load trace script failed\n");
-        goto err4;
+        goto err3;
     }
 
-    tattr.nthread = 1;
-    tattr.entry = mln_trace_iothread_entry;
-    tattr.args = ev;
-    tattr.handler = NULL;
-    if (mln_iothread_init(&t, &tattr) < 0) {
-        mln_log(error, "iothread init failed\n");
-        goto err4;
+    if (mln_event_set_timer(ev, 10, NULL, mln_trace_lang_check) == NULL) {
+        goto err3;
     }
 
     return 0;
 
-err4:
-    mln_lang_free(trace_lang);
 err3:
-    mln_event_free(ev);
+    mln_lang_free(trace_lang);
 err2:
     close(trace_signal_fds[0]);
     close(trace_signal_fds[1]);
@@ -79,43 +77,15 @@ mln_lang_ctx_t *mln_trace_task_get(void)
     return trace_ctx;
 }
 
-static inline int mln_trace_enable(mln_string_t **path)
+static void mln_trace_lang_check(mln_event_t *ev, void *data)
 {
-    mln_conf_t *cf;
-    mln_conf_domain_t *cd;
-    mln_conf_cmd_t *cc;
-    mln_conf_item_t *ci;
-
-    cf = mln_get_conf();
-    if (cf == NULL) {
-        mln_log(error, "Configuration messed up\n");
-        return -1;
-    }
-
-    cd = cf->search(cf, "main");
-    if (cd == NULL) {
-        mln_log(error, "Conf [main] domain not exist\n");
-        return -1;
-    }
-
-    cc = cd->search(cd, "trace_mode");
-    if (cc == NULL) return 0;
-
-    ci = cc->search(cc, 1);
-    if (mln_conf_get_narg(cc) != 1 || ci == NULL) {
-        mln_log(error, "Invalid argument of configuration [trace_mode]\n");
-        return -1;
-    }
-    if (ci->type == CONF_STR) {
-        *path = ci->val.s;
-    } else if (ci->type == CONF_BOOL && !ci->val.b) {
-        return 0;
+    if (trace_lang != NULL && trace_lang->run_head == NULL && trace_lang->wait_head == NULL) {
+        mln_lang_free(trace_lang);
+        trace_lang = NULL;
+        trace_ctx = NULL;
     } else {
-        mln_log(error, "Invalid argument of configuration [trace_mode]\n");
-        return -1;
+        mln_event_set_timer(ev, 10, NULL, mln_trace_lang_check);
     }
-
-    return 1;
 }
 
 static int mln_trace_lang_signal(mln_lang_t *lang)
@@ -126,12 +96,6 @@ static int mln_trace_lang_signal(mln_lang_t *lang)
 static int mln_trace_lang_clear(mln_lang_t *lang)
 {
     return mln_event_set_fd(mln_lang_event_get(lang), trace_signal_fds[0], M_EV_CLR, M_EV_UNLIMITED, NULL, NULL);
-}
-
-static void *mln_trace_iothread_entry(void *args)
-{
-    mln_event_dispatch((mln_event_t *)args);
-    return NULL;
 }
 
 static void mln_trace_lang_ctx_return_handler(mln_lang_ctx_t *ctx)
